Bugfixing
-Added Functionality for clearBong
-Fixed that you can Still Scroll the mainscreen
-Fixed Messages showing behind other layers
-Fixed Scrollbar for Categories
-Fixed Arrow Right not loading

--- a/www/style.css
+++ b/www/style.css
@@ -114,6 +114,7 @@ body{
     float: left;
     margin-top: -5px;
     position: relative;
+	overflow: hidden;
 }
 
 .catscroller{
@@ -123,9 +124,8 @@ body{
 .catscroller ul{
     width: auto;
     padding: 0px;
-    height: 48px;
+    height: 50px;
     margin: 0px;
-    margin-top: 17px;
     display:inline-block;
 }
 
@@ -149,8 +149,8 @@ body{
     margin-left: -53px;
     border-right:solid 2px #717580;
     background-size: 40px;
-    background-position: 3px 4px;
-    background-image:url(/img/arrow.png);
+    background-position: 3px 7px;
+    background-image:url(img/arrow.png);
     background-repeat:no-repeat;
     -webkit-transform: rotate(180deg);
 	-moz-transform: rotate(180deg);
@@ -163,8 +163,6 @@ body{
     width: 100%;
 }
 .Category ul li{
-    position:relative;
-    top:-16px;
     float:left;
     list-style:none;
     width:130px;
@@ -182,6 +180,7 @@ body{
     width: 280px;
     height: 430px;
     border: 1px solid #808080;
+	border-right: 0px solid ;
     margin-bottom:10px;
     z-index:2;
     background-color:white;
@@ -423,15 +422,18 @@ body{
 }
 .status{
     position: absolute;
-    width: auto;
-    background-color: #78818B;
-    color: white;
-    font-family: Arial;
-    font-weight: Bold;
-    font-size: 25px;
-    text-align: center;
-    top: -50px;
-    padding:5px;
+	width: 100%;
+	background-color: rgb(140, 193, 84);
+	color: #FFF;
+	font-family: Arial;
+	font-weight: bold;
+	font-size: 25px;
+	text-align: center;
+	bottom: -52px;
+	height: 38px;
+	z-index: 9999999;
+	padding-top: 14px;
+	display: none;
 }
 .fileName{
     border: solid 1px #8CC154;
